name:                wataori-mart
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kanmu/wataori-mart#readme
license:             BSD3
license-file:        LICENSE
author:              Team Wataori Mart
maintainer:          akira.chiku@gmail.com
copyright:           2017 Team Wataori Mart
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
    , scotty
    , postgresql-simple
  default-language:    Haskell2010

executable wataori-mart-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , postgresql-simple
                     , wataori-mart
  default-language:    Haskell2010

test-suite wataori-mart-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotty
                     , postgresql-simple
                     , wataori-mart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kanmu/wataori-mart
